--- a/popup-video.css
+++ b/popup-video.css
@@ -18,8 +18,14 @@
 }
 .popup-video iframe {
   width: 100%;
-  height: 100%;
-  aspect-ratio: 16 / 9;
+  height: 280px;
+  aspect-ratio: unset;
+}
+@supports (aspect-ratio: 16 / 9) {
+  .popup-video iframe {
+    height: 100%;
+    aspect-ratio: 16 / 9;
+  }
 }
 @media screen and (max-width: 1439px) {
   .popup-video {
